--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
   	<canvas id="canvas" width="500" height="500"></canvas>
-  	<script type="module" src="/src/app.js"></script>
+  	<script type="module" src="/dist/app.js"></script>
   </body>
 </html>
